feat: resolve https://github.com/smooks/smooks/issues/581 (#615)